fix size on mobile phone

--- a/src/common/InputSearch/InputSearch.module.scss
+++ b/src/common/InputSearch/InputSearch.module.scss
@@ -6,7 +6,7 @@
     }
 
     > input {
-        @apply h-12 w-full rounded-xl border-0 bg-[#1D2633] pl-10 pr-20 outline-none;
+        @apply h-12 w-full rounded-xl border-0 bg-[#1D2633] pl-10 pr-16 outline-none;
     }
 
     .wrapperLogo {
