--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,8 @@ a {
 body {
   margin: 0;
   overflow-x: hidden;
-  min-height: 100vh;
+  height: 100vh;
+  max-height: -webkit-fill-available;
 }
 
 @layer base {
@@ -38,49 +39,46 @@ body {
   }
 }
 
-.qr-image-wrapper{
-  --b: 3px;   /* thickness of the border */
-  --c: white;   /* color of the border */
-  --w: 40px;  /* width of border */
-  --r: 18px;  /* radius */
+.qr-image-wrapper {
+  --b: 3px; /* thickness of the border */
+  --c: white; /* color of the border */
+  --w: 40px; /* width of border */
+  --r: 18px; /* radius */
 
   padding: var(--b); /* space for the border */
-  
-  position:relative;
-  /*Irrelevant code*/  
-  width:100% !important;
-  height:100% !important;
-  box-sizing:border-box;
-  margin:5px;
-  display:inline-flex;
-  font-size:30px;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
+
+  position: relative;
+  /*Irrelevant code*/
+  width: 100% !important;
+  height: 100% !important;
+  box-sizing: border-box;
+  margin: 5px;
+  display: inline-flex;
+  font-size: 30px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .qr-image-wrapper::before {
-  content: "";
+  content: '';
   position: absolute;
   inset: 0;
-  background: var(--c,red);
+  background: var(--c, red);
   padding: var(--b);
   border-radius: var(--r);
-  -webkit-mask:
-    linear-gradient(  0deg,#000 calc(2*var(--b)),#0000 0) 50% var(--b)/calc(100% - 2*var(--w)) 100% repeat-y,
-    linear-gradient(-90deg,#000 calc(2*var(--b)),#0000 0) var(--b) 50%/100% calc(100% - 2*var(--w)) repeat-x,
-    linear-gradient(#000 0 0) content-box,
-    linear-gradient(#000 0 0);
+  -webkit-mask: linear-gradient(0deg, #000 calc(2 * var(--b)), #0000 0) 50% var(--b) / calc(100% - 2 * var(--w)) 100% repeat-y,
+    linear-gradient(-90deg, #000 calc(2 * var(--b)), #0000 0) var(--b) 50%/100% calc(100% - 2 * var(--w)) repeat-x,
+    linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
   -webkit-mask-composite: destination-out;
-          mask-composite: exclude;
+  mask-composite: exclude;
 }
 
-.qr-image-wrapper section { 
-  border-radius: 16px;                   
+.qr-image-wrapper section {
+  border-radius: 16px;
 }
 
 .qr-image-wrapper section div {
-  box-shadow: unset !important; 
-  border: 0px  !important;    
+  box-shadow: unset !important;
+  border: 0px !important;
 }
-
